refactor: Code updated to resolve the code smells Complex Method and Long Identifier